<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceConfigActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="166dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="148dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="217dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="282dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="350dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="421dp" />

    <TextView
        android:id="@+id/device_config"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_device_config"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/label_open_time"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_time"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/label_close_time"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_time"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/label_pause_time"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_time"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/label_light_open"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_open"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <TextView
        android:id="@+id/label_light_close"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_close"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline23"
        app:layout_constraintVertical_bias="0.473" />

    <EditText
        android:id="@+id/open_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/close_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/pause_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/light_open_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/light_close_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline23"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/end_device_conf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/commit_device_conf"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="499dp" />
</androidx.constraintlayout.widget.ConstraintLayout>